--- a/index.html
+++ b/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shuvo's Portfolio</title>
-    <link rel="stylesheet" href="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width-1">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Rashedul Islam</span> World</h1>
+            <h3>A Programmer and Mathematician</h3>
+            <p>I love conding.I love conding.I love conding.I love conding.I love conding.I love conding.I love
+                conding.I
+                love conding.I love conding.I love conding.I love conding.I love conding.I love conding.I love conding.I
+                love conding.I love conding.I love conding.I love conding.I love conding.I love conding.I love conding.I
+                love conding.I love conding.I love conding.I love conding.I love conding.I love conding.I love conding.I
+                conding.I love conding.I love conding.I love conding.I love conding.I
+                love conding.I love conding.I love conding.I love conding.I love conding.I love conding.I love conding.
+            </p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/shuvo6919">Hire Me</a>
+        </div>
+
+        <div class="half-width-2">
+            <img src="images/my-bg.png" alt="Rashedul Islam Shuvo">
+        </div>
+    </section>
+
+
 </body>
+
 </html>
