--- a/index.html
+++ b/index.html
@@ -34,6 +34,24 @@
     </section>
 
 
+    <section class="section-2">
+        <div class="half-width-2">
+            <img src="images/my-bg-3.png" alt="shuvo">
+        </div>
+
+
+        <div class="half-width-1">
+            <h1>Dream Big</h1>
+            <h3>Become a web developer</h3>
+            <p>I an an web developer I an an web developerI an an web developerI an an web developerI an an web
+                developerI an an web developerI an an web developer</p>
+            <a class="link-button-2" target="_blank" href="https://www.youtube.com/watch?v=6DBcmD_tFI4">Download
+                Resume</a>
+
+        </div>
+    </section>
+
+
 </body>
 
 </html>
