--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width-1">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Rashedul Islam</span> World</h1>
@@ -34,7 +34,7 @@
     </section>
 
 
-    <section class="section-2">
+    <section class="section-2 flexible-container">
         <div class="half-width-2">
             <img src="images/my-bg-3.png" alt="shuvo">
         </div>
@@ -51,7 +51,45 @@
         </div>
     </section>
 
+    <section class="experience-part">
+        <h1 style=" margin: 0px 0px 0px 20px;">Experience</h1>
+
+        <div class="flexible-container">
+            <div id="developer-1" class="half-width">
+                <h2>Full Stack Web Developer</h1>
+                    <h3 class="orange-color">2021-Present | Pro Developer</h3>
+                    <p>I am the master of Html, Javascript and CssI am the master of Html, Javascript and CssI am the
+                        master
+                        of
+                        Html, Javascript and CssI am the master of Html, Javascript and CssI am the master of Html,
+                        Javascript
+                        and CssI am the master of Html, Javascript and CssI am the master of Html, Javascript and CssI
+                        am
+                        the
+                        master of Html, Javascript and Css</p>
+            </div>
+
+            <div id="developer-2" class="half-width">
+                <h2>Baby Web Developer</h1>
+                    <h3 class="orange-color">2021-Present | Pro Developer</h3>
+                    <p>I am the master of Html, Javascript and CssI am the master of Html, Javascript and CssI am the
+                        master
+                        of
+                        Html, Javascript and CssI am the master of Html, Javascript and CssI am the master of Html,
+                        Javascript
+                        and CssI am the master of Html, Javascript and CssI am the master of Html, Javascript and CssI
+                        am
+                        the
+                        master of Html, Javascript and Css</p>
+            </div>
+        </div>
+    </section>
+
 
 </body>
+
+<footer>
+    <p>ishuvo1999@gmail.com</p>
+</footer>
 
 </html>
